<resources>
    <string name="app_name">Get\u00A0Motivated</string>
    <string name="ad_unit_id" translatable="false">ca-app-pub-5782047288878600/2056305711</string>
    <string name="ad_unit_interstitial" translatable="false">ca-app-pub-5782047288878600/3327816906</string>


    <string name="motivation_default">The problems we face either break us, or make us.</string>
    <string name="motivation_share">Share motivation</string>
    <string name="motivation_favorite">Favorite motivation</string>
    <string name="motivation_next">Next motivation</string>
    <string name="motivation_copied">Motivation copied to clipboard</string>

    <string name="share">Share App</string>
    <string name="feedback">Feedback</string>
    <string name="refresh">Refresh</string>
    <string name="store">Store</string>
    <string name="favorites">Favorites</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="feedback_title">Enjoying Get\u00A0Motivated?                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                              </string>
    <string name="feedback_msg">Reviews on Google Play can have a massive impact!</string>
    <string name="btn_close">Close</string>
    <string name="btn_rate_app">Rate App</string>
    <string name="btn_contact_us">Email us</string>
    <string name="txt_no_email">No email application found</string>

    <string name="why_ads">Remove Ads</string>
    <string name="ads_msg">Enter your promo code here.\n
        \nIf you don\'t have an unlock code,
        just send us a quick email request!
    </string>
    <string name="welcome_premium">Welcome to the premium experience</string>
    <string name="wrong_code">That is not a valid promo code</string>
    <string name="motivation_content_description" translatable="false">Motivation Image</string>
    <string name="motivation_download">Download Image</string>
    <string name="no_storage">External storage not available</string>
    <string name="permission_required">Saving images requires this permission</string>
    <string name="image_open">Tap to open your image</string>
    <string name="image_saved">Image saved</string>
    <string name="download_failed">Failed to download</string>

</resources>
