<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="101"
        app:showAsAction="ifRoom"
        android:title="@string/refresh"/>

    <item
        android:id="@+id/action_favorites"
        android:icon="@drawable/ic_menu_favorite"
        android:orderInCategory="102"
        app:showAsAction="ifRoom"
        android:title="@string/favorites"/>

    <item
        android:id="@+id/menu_share"
        android:orderInCategory="111"
        android:title="@string/share"/>

    <item
        android:id="@+id/menu_feedback"
        android:orderInCategory="112"
        android:title="@string/feedback"/>

    <item
        android:id="@+id/menu_why_ads"
        android:orderInCategory="113"
        android:title="@string/why_ads"/>

</menu>