<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dip">

    <android.support.v7.widget.CardView
        android:id="@+id/motivation_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:elevation="3dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >

            <ImageView
                android:id="@+id/motivation_image"
                android:contentDescription="@string/motivation_content_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:src="@drawable/bg001" />

            <TextView
                android:id="@+id/textView_motivation"
                android:text="@string/motivation_default"
                style="@style/N18TextViewStyle"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="10dp"/>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal">

                <ImageButton
                    android:id="@+id/button_download"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/motivation_download"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="6dp"
                    android:src="@drawable/button_download"/>

                <ImageButton
                    android:id="@+id/button_share_motivation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/motivation_share"
                    android:padding="12dp"
                    android:src="@drawable/button_share" />

                <com.github.ivbaranov.mfb.MaterialFavoriteButton
                    android:id="@+id/button_favorite_motivation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/motivation_favorite"
                    app:mfb_padding="7"
                    app:mfb_type="heart"/>

            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

