<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="6dip">

    <android.support.v7.widget.CardView
        android:id="@+id/motivation_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardElevation="3dp"
        app:cardBackgroundColor="#88000000"
        android:layout_centerHorizontal="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/btn_rate_app"
                android:padding="12dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_stars_black_24dp" />

            <ImageButton
                android:id="@+id/button_refresh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/refresh"
                android:padding="12dp"
                android:tint="@color/white"
                android:src="@drawable/ic_menu_refresh"/>

            <ImageButton
                android:id="@+id/button_store"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/store"
                android:padding="12dp"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_wallpaper_black_24dp" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>

